[package]
name = "fsp"
version = "0.1.0"
authors = ["Steve Ko <stevko@buffalo.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[features]
default = ["debug"] # if you don't want debug messages, use default = [].
debug = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
